Fixed white spacing issues

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -159,6 +159,8 @@ body {
 #row-0 {
   background-color: rgb(240, 255, 245)
   margin: 0 auto;
+  margin-top: -28px;
+  margin-bottom: -10px;
   min-width: 1000px;
   padding-top: 40px;
   padding-bottom: 30px;
